--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,25 @@
 security.oauth2.resource.filter-order=3
+security.oauth2.resource.id=oauth2_application
+
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.h2.console.enabled=true
+
+access_token.validity_period=3600
+refresh_token.validity_period=10000
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/auth?useUnicode=yes&characterEncoding=UTF-8
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=pub123
+#
+#spring.jpa.properties.hibernate.connection.characterEncoding=UTF-8
+#spring.jpa.properties.hibernate.connection.CharSet=UTF-8
+#spring.jpa.properties.hibernate.connection.useUnicode=true
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.database=MYSQL
+#spring.jpa.show-sql=true
+#spring.jpa.generate-ddl=false
+#spring.jpa.hibernate.ddl-auto=update
